--- a/HW2/ML2022Spring_HW2.ipynb
+++ b/HW2/ML2022Spring_HW2.ipynb
@@ -14,6 +14,34 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Solution\n",
+        "\n",
+        "Report questions  \n",
+        "\n",
+        "1. Compare train/valid acc for 2 models with similar parameters. (layers = 2, dim = 1700; layers = 6, dim = 1024)  \n",
+        "A: Shallow fat layer is better than deep thin layer. (Used sample code to compare)  \n",
+        "$$Td = 0.656 ;Vd = 0.676  $$\n",
+        "$$ Ts = 0.686 ;Vs = 0.686  $$\n",
+        "\n",
+        "2. Add dropout layer, compare acc of dropout rates equal to 0.25 / 0.5 / 0.75  \n",
+        "A: Too large dropout rate cause lower accuracy.\n",
+        "$$T_{0.25} = 0.686 ;V_{0.25} = 0.686  $$\n",
+        "$$T_{0.5} = 0.635 ;V_{0.5} = 0.666  $$\n",
+        "$$T_{0.75} = 0.565 ;V_{0.75} = 0.618  $$\n",
+        "\n",
+        "Final Result\n",
+        "No siginificant modification of model layers, add batchnorm, dropoutlayer. Also, concate more frame as input data.  \n",
+        "Epoch=15, dropout rate = 0.33, concat_nframe = 15\n",
+        "$$ Public Score = 0.739, Private Score = 0.740 $$\n",
+        "\n",
+        "Beat medium baseline, close to strong baseline 0.751\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -128,6 +156,11 @@
         "import pandas as pd\n",
         "import torch\n",
         "from tqdm import tqdm\n",
+        "# Import summary\n",
+        "from torchsummary import summary\n",
+        "\n",
+        "# For plotting learning curve\n",
+        "from torch.utils.tensorboard import SummaryWriter\n",
         "\n",
         "def load_feat(path):\n",
         "    feat = torch.load(path)\n",
@@ -280,12 +313,14 @@
         "import torch.nn.functional as F\n",
         "\n",
         "class BasicBlock(nn.Module):\n",
-        "    def __init__(self, input_dim, output_dim):\n",
+        "    def __init__(self, input_dim, output_dim, dropout_rate=0.5):  # 添加 dropout_rate 參數\n",
         "        super(BasicBlock, self).__init__()\n",
         "\n",
         "        self.block = nn.Sequential(\n",
         "            nn.Linear(input_dim, output_dim),\n",
+        "            nn.BatchNorm1d(output_dim),  # 添加批次標準化層\n",
         "            nn.ReLU(),\n",
+        "            nn.Dropout(dropout_rate)  # 在每個 BasicBlock 後添加 Dropout 層\n",
         "        )\n",
         "\n",
         "    def forward(self, x):\n",
@@ -294,12 +329,12 @@
         "\n",
         "\n",
         "class Classifier(nn.Module):\n",
-        "    def __init__(self, input_dim, output_dim=41, hidden_layers=1, hidden_dim=256):\n",
+        "    def __init__(self, input_dim, output_dim=41, hidden_layers=1, hidden_dim=256, dropout_rate=0.5):  # 添加 dropout_rate 參數\n",
         "        super(Classifier, self).__init__()\n",
         "\n",
         "        self.fc = nn.Sequential(\n",
-        "            BasicBlock(input_dim, hidden_dim),\n",
-        "            *[BasicBlock(hidden_dim, hidden_dim) for _ in range(hidden_layers)],\n",
+        "            BasicBlock(input_dim, hidden_dim, dropout_rate),  # 添加 dropout_rate 參數\n",
+        "            *[BasicBlock(hidden_dim, hidden_dim, dropout_rate) for _ in range(hidden_layers)],  # 添加 dropout_rate 參數\n",
         "            nn.Linear(hidden_dim, output_dim)\n",
         "        )\n",
         "\n",
@@ -326,20 +361,21 @@
       "outputs": [],
       "source": [
         "# data prarameters\n",
-        "concat_nframes = 1              # the number of frames to concat with, n must be odd (total 2k+1 = n frames)\n",
+        "concat_nframes = 15              # the number of frames to concat with, n must be odd (total 2k+1 = n frames)\n",
         "train_ratio = 0.8               # the ratio of data used for training, the rest will be used for validation\n",
         "\n",
         "# training parameters\n",
-        "seed = 0                        # random seed\n",
+        "seed = 995888                        # random seed\n",
         "batch_size = 512                # batch size\n",
-        "num_epoch = 5                   # the number of training epoch\n",
-        "learning_rate = 0.0001          # learning rate\n",
+        "num_epoch = 15                   # the number of training epoch\n",
+        "learning_rate = 0.0005         # learning rate\n",
+        "dropout_rate = 0.33                # dropout rate\n",
         "model_path = './models/model.ckpt'     # the path where the checkpoint will be saved\n",
         "\n",
         "# model parameters\n",
         "input_dim = 39 * concat_nframes # the input dim of the model, you should not change the value\n",
-        "hidden_layers = 1               # the number of hidden layers\n",
-        "hidden_dim = 256                # the hidden dim"
+        "hidden_layers = 3               # the number of hidden layers\n",
+        "hidden_dim = 2048               # the hidden dim"
       ]
     },
     {
@@ -430,10 +466,10 @@
         "# fix random seed\n",
         "same_seeds(seed)\n",
         "\n",
-        "# create model, define a loss function, and optimizer\n",
-        "model = Classifier(input_dim=input_dim, hidden_layers=hidden_layers, hidden_dim=hidden_dim).to(device)\n",
-        "criterion = nn.CrossEntropyLoss() \n",
-        "optimizer = torch.optim.AdamW(model.parameters(), lr=learning_rate)"
+        "# create model\n",
+        "model = Classifier(input_dim=input_dim, hidden_layers=hidden_layers, hidden_dim=hidden_dim, dropout_rate=dropout_rate).to(device)\n",
+        "\n",
+        "summary(model, (input_dim,))"
       ]
     },
     {
@@ -457,68 +493,109 @@
       },
       "outputs": [],
       "source": [
-        "best_acc = 0.0\n",
-        "if not os.path.isdir('./models'):\n",
-        "    os.mkdir('./models') # Create directory of saving models.\n",
-        "    \n",
-        "for epoch in range(num_epoch):\n",
-        "    train_acc = 0.0\n",
-        "    train_loss = 0.0\n",
-        "    val_acc = 0.0\n",
-        "    val_loss = 0.0\n",
-        "    \n",
-        "    # training\n",
-        "    model.train() # set the model to training mode\n",
-        "    for i, batch in enumerate(tqdm(train_loader)):\n",
-        "        features, labels = batch\n",
-        "        features = features.to(device)\n",
-        "        labels = labels.to(device)\n",
-        "        \n",
-        "        optimizer.zero_grad() \n",
-        "        outputs = model(features) \n",
-        "        \n",
-        "        loss = criterion(outputs, labels)\n",
-        "        loss.backward() \n",
-        "        optimizer.step() \n",
-        "        \n",
-        "        _, train_pred = torch.max(outputs, 1) # get the index of the class with the highest probability\n",
-        "        train_acc += (train_pred.detach() == labels.detach()).sum().item()\n",
-        "        train_loss += loss.item()\n",
-        "    \n",
-        "    # validation\n",
-        "    if len(val_set) > 0:\n",
-        "        model.eval() # set the model to evaluation mode\n",
-        "        with torch.no_grad():\n",
-        "            for i, batch in enumerate(tqdm(val_loader)):\n",
-        "                features, labels = batch\n",
-        "                features = features.to(device)\n",
-        "                labels = labels.to(device)\n",
-        "                outputs = model(features)\n",
-        "                \n",
-        "                loss = criterion(outputs, labels) \n",
-        "                \n",
-        "                _, val_pred = torch.max(outputs, 1) \n",
-        "                val_acc += (val_pred.cpu() == labels.cpu()).sum().item() # get the index of the class with the highest probability\n",
-        "                val_loss += loss.item()\n",
+        "def trainer(train_loader, val_loader, model, device):\n",
+        "    criterion = nn.CrossEntropyLoss() \n",
+        "    optimizer = torch.optim.AdamW(model.parameters(), lr=learning_rate)\n",
         "\n",
-        "            print('[{:03d}/{:03d}] Train Acc: {:3.6f} Loss: {:3.6f} | Val Acc: {:3.6f} loss: {:3.6f}'.format(\n",
-        "                epoch + 1, num_epoch, train_acc/len(train_set), train_loss/len(train_loader), val_acc/len(val_set), val_loss/len(val_loader)\n",
+        "    writer = SummaryWriter() # Writer of tensoboard. \n",
+        "\n",
+        "    step = 0\n",
+        "    best_acc = 0.0\n",
+        "\n",
+        "    if not os.path.isdir('./models'):\n",
+        "        os.mkdir('./models') # Create directory of saving models.\n",
+        "        \n",
+        "    for epoch in range(num_epoch):\n",
+        "        train_acc = 0.0\n",
+        "        train_loss = 0.0\n",
+        "        val_acc = 0.0\n",
+        "        val_loss = 0.0\n",
+        "        loss_record = []\n",
+        "        acc_record = []\n",
+        "\n",
+        "        \n",
+        "        # training\n",
+        "        model.train() # set the model to training mode\n",
+        "        for i, batch in enumerate(tqdm(train_loader)):\n",
+        "            features, labels = batch\n",
+        "            features = features.to(device)\n",
+        "            labels = labels.to(device)\n",
+        "            \n",
+        "            optimizer.zero_grad() \n",
+        "            outputs = model(features) \n",
+        "            \n",
+        "            loss = criterion(outputs, labels)\n",
+        "            loss.backward() \n",
+        "            optimizer.step()\n",
+        "            step += 1\n",
+        "            loss_record.append(loss.detach().item())\n",
+        "\n",
+        "            _, train_pred = torch.max(outputs, 1) # get the index of the class with the highest probability\n",
+        "            train_acc += (train_pred.detach() == labels.detach()).sum().item()\n",
+        "            train_loss += loss.item()\n",
+        "\n",
+        "        mean_train_loss = sum(loss_record)/len(loss_record)\n",
+        "        writer.add_scalar('Loss/train', mean_train_loss, step)\n",
+        "        writer.add_scalar('acc/train', train_acc/len(train_set), step)\n",
+        "        \n",
+        "        # validation\n",
+        "        if len(val_set) > 0:\n",
+        "            model.eval() # set the model to evaluation mode\n",
+        "            with torch.no_grad():\n",
+        "                for i, batch in enumerate(tqdm(val_loader)):\n",
+        "                    features, labels = batch\n",
+        "                    features = features.to(device)\n",
+        "                    labels = labels.to(device)\n",
+        "                    outputs = model(features)\n",
+        "                    \n",
+        "                    loss = criterion(outputs, labels) \n",
+        "                    loss_record.append(loss.item())\n",
+        "                    \n",
+        "                    _, val_pred = torch.max(outputs, 1) \n",
+        "                    val_acc += (val_pred.cpu() == labels.cpu()).sum().item() # get the index of the class with the highest probability\n",
+        "                    val_loss += loss.item()\n",
+        "\n",
+        "                print('[{:03d}/{:03d}] Train Acc: {:3.6f} Loss: {:3.6f} | Val Acc: {:3.6f} loss: {:3.6f}'.format(\n",
+        "                    epoch + 1, num_epoch, train_acc/len(train_set), train_loss/len(train_loader), val_acc/len(val_set), val_loss/len(val_loader)\n",
+        "                ))\n",
+        "\n",
+        "                # if the model improves, save a checkpoint at this epoch\n",
+        "                if val_acc > best_acc:\n",
+        "                    best_acc = val_acc\n",
+        "                    torch.save(model.state_dict(), model_path)\n",
+        "                    print('saving model with acc {:.3f}'.format(best_acc/len(val_set)))\n",
+        "        else:\n",
+        "            print('[{:03d}/{:03d}] Train Acc: {:3.6f} Loss: {:3.6f}'.format(\n",
+        "                epoch + 1, num_epoch, train_acc/len(train_set), train_loss/len(train_loader)\n",
         "            ))\n",
         "\n",
-        "            # if the model improves, save a checkpoint at this epoch\n",
-        "            if val_acc > best_acc:\n",
-        "                best_acc = val_acc\n",
-        "                torch.save(model.state_dict(), model_path)\n",
-        "                print('saving model with acc {:.3f}'.format(best_acc/len(val_set)))\n",
-        "    else:\n",
-        "        print('[{:03d}/{:03d}] Train Acc: {:3.6f} Loss: {:3.6f}'.format(\n",
-        "            epoch + 1, num_epoch, train_acc/len(train_set), train_loss/len(train_loader)\n",
-        "        ))\n",
+        "        mean_valid_loss = sum(loss_record)/len(loss_record)\n",
+        "        writer.add_scalar('Loss/valid', mean_valid_loss, step)\n",
+        "        writer.add_scalar('acc/valid', val_acc/len(val_set), step)\n",
         "\n",
-        "# if not validating, save the last epoch\n",
-        "if len(val_set) == 0:\n",
-        "    torch.save(model.state_dict(), model_path)\n",
-        "    print('saving model at last epoch')\n"
+        "    # if not validating, save the last epoch\n",
+        "    if len(val_set) == 0:\n",
+        "        torch.save(model.state_dict(), model_path)\n",
+        "        print('saving model at last epoch')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer(train_loader, val_loader, model, device)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%reload_ext tensorboard\n",
+        "%tensorboard --logdir=./runs/\n"
       ]
     },
     {
