Add tensorboard figure

--- a/HW2/ML2022Spring_HW2.ipynb
+++ b/HW2/ML2022Spring_HW2.ipynb
@@ -38,6 +38,9 @@
         "$$ Public Score = 0.739, Private Score = 0.740 $$\n",
         "\n",
         "Beat medium baseline, close to strong baseline 0.751\n",
+        "\n",
+        "Training tensorboard  \n",
+        "![Figure](..\\fig\\hw2_tensorboard.jpg \"Tensorboard\")\n",
         "\n"
       ]
     },
